--- a/blushup.html
+++ b/blushup.html
@@ -19,7 +19,8 @@
     <script type="text/javascript" src="work/js/fancybox-thumbs.js"></script>
     <script type="text/javascript" src="work/js/wow.js"></script>
     <script type="text/javascript" src="work/js/main.js"></script>
-    
+	<link href='https://fonts.googleapis.com/css?family=Montserrat:700' rel='stylesheet' type='text/css'>
+    <script src="https://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>    
 
 
 
@@ -41,6 +42,7 @@
 	</section>
 
 	<section class="bg wrapper">
+		<h1><a href="https://blushup.com">Blushup.com</a></h1>
 		<div class="animated wow fadeInDown">
 		<h2>Please hit me up and I will be more than happy to share and discuss with you as much as I can!</h2>
 		<div class="link"> <a href="mailto:chiyyyy@utexas.edu"><p>Email: chiyyyy@utexas.edu</p></a><a href="tel:5122010220"><p>Phone: 5122010220</p></a>
@@ -61,5 +63,6 @@
 	</footer>
 	<!--  End footer  -->
     <script src='../ga.js'></script>
+
 </body>
 </html>
