--- a/blushup.html
+++ b/blushup.html
@@ -42,7 +42,7 @@
 	</section>
 
 	<section class="bg wrapper">
-		<h1><a href="https://blushup.com">Blushup.com</a></h1>
+		<h1><a href="https://blushup.com/">Blushup.com</a></h1>
 		<div class="animated wow fadeInDown">
 		<h2>Please hit me up and I will be more than happy to share and discuss with you as much as I can!</h2>
 		<div class="link"> <a href="mailto:chiyyyy@utexas.edu"><p>Email: chiyyyy@utexas.edu</p></a><a href="tel:5122010220"><p>Phone: 5122010220</p></a>
