--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
 					<ul>
 						<li class="active"><a href="#" data-nav-section="home">Home</a></li>
 						<li><a href="#" data-nav-section="about">About</a></li>
+						<li><a href="#" data-nav-section="resume">resume</a></li>
 						<li><a href="#" data-nav-section="work">Work</a></li>
 						<li><a href="#" data-nav-section="skills">Skills</a></li>
 						<li><a href="#" data-nav-section="contact">Contact</a></li>
@@ -170,7 +171,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 									</div>
 								</div>
 							</div>
-							<div class="row">
+							<div class="row" data-section="resume">
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInUp">
 									<div class="services color-1">
 										<span class="icon2"><i class="icon-bulb"></i></span>
