--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInDown">
 									<div class="services color-4">
 										<span class="icon2"><i class="icon-target3"></i></span>
-										<h3>Challenging</h3>
+										<h3>User-Centered</h3>
 									</div>
 								</div>
 							</div>
