--- a/SoCoolEng.html
+++ b/SoCoolEng.html
@@ -208,9 +208,9 @@
 			</section>
 
 		<section id="section4" class="evaluation wrapper cd-section">
-			<div class="animated wow fadeInUp"><h2>Evaluation</h2>
+			<h2>Evaluation</h2>
 			<span>To evaluate our project and gain feedback, we conducted pretest-posttest with 2 classes. Total sample number was 68. <br> According to the outcome, correct rate of pronunciation increases the most (90.2%) and vocabulary comes in second place (80%). Moreover, correct rate of grammar rises the least. We speculate that due to the complexity of grammar,  it is difficult to have obvious  enhance in grammar skill. Last but not least, the correct rate of expression climbs up from 34% to 58.6%. Although long-term evaluation is still needed, we agree that So Cool English has potential to become even better in the future. </span>
-			 <div id="chart_div" style="width: 100%; height: 500px; top: 3%;"></div></div>
+			 <div id="chart_div" style="width: 100%; height: 500px; top: 3%;"></div>
 
 
 
