--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 							<div class="project" style="background-image: url(images/OB.png); width: 107.5%;">
 							<div class="desc">
 									<div class="con">
-										<h1>ObjectRocket</h1>
+										<h1>ObjectRocket - a rackspace company</h1>
 										<span>UX Intern</span>
 									</div>
 								</div>
