--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 							</div>
 						</div></a>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-							<div class="project" style="background-image: url(work/img/vote.png); margin-left: 3.5% ;width: 96%; ">
+							<div class="project" style="background-image: url(work/img/vote.png);">
 								<a href="vote.html" target="blank"><div class="desc">
 									<div class="con">
 										<h1>#Vote</h1>
