--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 							<a href="SoCoolEng.html" target="blank"><div class="desc">
 									<div class="con">
 										<h1>So Cool English</h1>
-										<span>Web Development</span>
+										<span>Product Design</span>
 									</div>
 								</div>
 							</div>
