--- a/Q's_farmer.html
+++ b/Q's_farmer.html
@@ -103,7 +103,7 @@
 			<li class="animated wow fadeInDown" data-wow-delay=".2s">
 				
 				<h2>My Role</h2>
-				<p>UI Designer<br>UX Researcher</p>
+				<p>UI/UX Designer<br>UX Researcher</p>
 			</li>
 			<li class="animated wow fadeInDown"  data-wow-delay=".4s">
 			
@@ -115,7 +115,7 @@
 			</li>
 			<li class="animated wow fadeInDown"  data-wow-delay=".6s">
 				<h2>Company</h2>
-				<p>Coursework at UT</p>
+				<p>Texas Framers Market</p>
 			</li>
 		</ul>
 	</section><!--  End intro  -->
@@ -311,7 +311,7 @@
 
 	<p>•	Design an intuitive and user-friendly interface so that users can efficiently place their order or reserve for events <br><br>
 	•	Provide a platform which allows farmers to update and sell their inventory easily and effectively<br><br>
-	•	Create and maintain connection between consumer and producer</strong><br></p>
+	•	Create and maintain connection between consumer and farmer</strong><br></p>
 
 	<span>
 	Based on our main functions and goals, we made our first wireframe.
@@ -330,7 +330,7 @@
 		<div class="animated wow fadeInDown">
 		<h1>Wireframe and Prototype</h1>
 		<h2>How does it work?</h2>
-		<span>According to unpredictable supplement and pre-order, we have orders start from pending status after consumers placing their orders. The farm has to confirm that all of items in the order are available and then click “confirm order” button to accept the order. We also designed a message section for consumers and producer to communicate directly and efficiently. </span>
+		<span>According to unpredictable supplement and pre-order, I have orders start from pending status after consumers placing their orders. The farm has to confirm that all of items in the order are available and then click “confirm order” button to accept the order. I also designed a message section for consumers and producer to communicate directly and efficiently. </span>
 		</div>
 
 		
@@ -354,7 +354,7 @@
 		<section class="pp wrapper">
 		<div class="animated wow fadeInDown">
 		<h2>Paper prototying </h2>
-		<span>In order to discover potential breakdowns before hi-fi interface, we conducted paper prototype testing. With lo-fi wireframe, it helps users to focus on the flow of task and their needs. Here were some of what we found: <br><br>
+		<span>In order to discover potential breakdowns before hi-fi interface, I conducted paper prototype testing. With lo-fi wireframe, it helps users to focus on the flow of task and their needs. Here were some of what I found: <br><br>
 
 		•	The location of cart is different from user’s experience on goods page<br>
 		•	“Cart” section is confusing for the farm manipulating<br>
@@ -362,7 +362,7 @@
 		•	Should search function be included<br>
 		•	Should there be filter for items and events<br><br>
 
-		<br>After revising over and over, we made our first interactive prototype.
+		<br>After revising over and over, I made first interactive prototype.
 
 	
 
