--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 					
 					<div class="row">
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-							<div class="project" style="background-image: url(images/OB.png); ">
+							<div class="project" style="background-image: url(images/OB.png); width: 109%; ">
 							<div class="desc">
 									<div class="con">
 										<h1>ObjectRocket - a rackspace company</h1>
@@ -244,7 +244,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 
 						<div class="row">
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-							<div class="project" style="background-image: url(images/Qeesi.png);">
+							<div class="project" style="background-image: url(images/Qeesi.png); width: 102%;">
 							<a href="https://drive.google.com/file/d/1Id-Vw4HyPX87aj-0kCcqqAyWDaPA3zkJ/view?usp=sharing" target="blank"><div class="desc">
 									<div class="con">
 										<h1>QEESI</h1>
