--- a/index.html
+++ b/index.html
@@ -220,14 +220,14 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 					<div class="row">
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="project" style="background-image: url(images/OB.png); width: 109%; ">
-							<div class="desc">
+							<a href="https://www.objectrocket.com/blog/beta/beta-elasticsearch-aws-announcement/" target="blank"><div class="desc">
 									<div class="con">
 										<h1>ObjectRocket - a rackspace company</h1>
 										<span>UX Intern</span>
 									</div>
 								</div>
 							</div>
-						</div>
+						</div></a>
 
 						<div class="row">
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
