--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE HTML>
 <html>
+
+<!--Hi there, thank you for stopped by here. Hope you enjoy my portfolio! Shoot me an email if you have any feedback or thoughts: chiyyyy@utexas.edu  -->
+
+
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
