--- a/Q's_farmer.html
+++ b/Q's_farmer.html
@@ -111,7 +111,7 @@
 				<p>Field Research<br>
 					Interview/Contextual Inquiry <br>							
 					Wirframe/Prototype <br>
-					Sketch/Balsamiq	</p>
+					Sketch/Figma/Balsamiq	</p>
 			</li>
 			<li class="animated wow fadeInDown"  data-wow-delay=".6s">
 				<h2>Company</h2>
