--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 									<div class="about-desc">
 										<span class="heading-meta">About Me</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
-										<p><strong>Eric Chi, a current graduate student of Information Studies at The University of Texas at Austin. I have 3+ years experience in UI/UX design & research and 2+ years experience in front-end & web development.</strong></p>
+										<p>Eric Chi, a <strong>UX Designer</strong> studying Master of Information Science at UT Austin. I have <strong>3+ years experience in UI/UX design & research</strong> and <strong>2+ years experience</strong> in front-end & web development.</p>
 										
 										<p>With a background in social sciences and information science, my focus is all on users. This speaks to why I'm passionate about solving problems in both digital and real world for all users. My work combines user research, user-centered design and UI/UX development. </p>
 
