--- a/index.html
+++ b/index.html
@@ -150,7 +150,9 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 									<div class="about-desc">
 										<span class="heading-meta">About Me</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
-										<p>Eric Chi, a <strong>UX Designer</strong> studying Master of Information Science at UT Austin. I have <strong>4+ years experience in UI/UX design & research</strong> and <strong>3+ years experience</strong> in front-end & web development.</p>
+										<div class="aboutme">
+										<p>Eric Chi, a <a href="#YouFoundtheEasterEgg!" class="effect-shine"><strong>UX Designer</strong> </a> studying Master of Information Science at UT Austin. </p> 
+										<p>I have  <a href="#YouFoundtheEasterEgg!" class="effect-shine"><strong>4+ years experience</strong></a> in UI/UX design & research and <a href="#YouFoundtheEasterEgg!" class="effect-shine"><strong>3+ years experience</strong></a> in front-end & web development.</p></div>
 										
 
 										
