--- a/blushup.html
+++ b/blushup.html
@@ -42,14 +42,34 @@
 	</section>
 
 	<section class="bg wrapper">
-		<h1><a href="https://blushup.com/">Blushup.com</a></h1>
-		<div class="animated wow fadeInDown">
-		<h2>Please hit me up and I will be more than happy to share and discuss with you as much as I can!</h2>
-		<div class="link"> <a href="mailto:chiyyyy@utexas.edu"><p>Email: chiyyyy@utexas.edu</p></a><a href="tel:5122010220"><p>Phone: 5122010220</p></a>
-		</div>
+		<h2>Overview</h2>
+		<div class="subtitle"><p>Blushup is a startup company in New York city and it offers a platform for customers to make in-store make up online. As a ui/ux designer, I worked closely with CEO and CTO to redesign our new platform. Moreover, due to NDA, I'm only able to show a quick review of my design. Please hit me up and I am more than happy to share details with you!</p></div>
+		
+		<ul class="clearfix">
+			<li>
+				
+				<h2>My Role</h2>
+				<p>UI/UX Designer</p>
+			</li>
+			<li>
+			
+				<h2>Skills</h2>
+				<p>	Wirframe/Prototype <br>
+					Figma <br>
+					Adobe PS/AI</p>
+			</li>
+			<li>
+				<h2>Company</h2>
+				<p>Blushup</p>
+			</li>
+		</ul>
+
+		<a href="https://blushup.com/">Blushup.com</a>
+
+		<iframe style="border: none; margin-left:20%; margin-top: 10%; " width="60%" height="700" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FfUFp6aKfgBbo7diZE7hfQF3T%2FBlushup-June-2019-Launch%3Fnode-id%3D0%253A50%26viewport%3D-5421%252C7647%252C1.1423035860061646%26scaling%3Dscale-down-width" allowfullscreen></iframe>
 
 	</section>
-	
+
 
 	<footer>
 		<div class="wrapper">
