--- a/blushup.html
+++ b/blushup.html
@@ -64,9 +64,13 @@
 			</li>
 		</ul>
 
-		<a href="https://blushup.com/">Blushup.com</a>
+		<a href="https://blushup.com/"><p>Visit Blushup.com</p></a>
 
-		<iframe style="border: none; margin-left:20%; margin-top: 10%; " width="60%" height="700" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FfUFp6aKfgBbo7diZE7hfQF3T%2FBlushup-June-2019-Launch%3Fnode-id%3D0%253A50%26viewport%3D-5421%252C7647%252C1.1423035860061646%26scaling%3Dscale-down-width" allowfullscreen></iframe>
+		<hr>
+
+		<h2>Redesign Preview</h2>
+		<iframe style="border: none; margin-left:20%; margin-top: 5%;" width="60%" height="700" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FfUFp6aKfgBbo7diZE7hfQF3T%2FBlushup-June-2019-Launch%3Fnode-id%3D2353%253A6%26viewport%3D445%252C469%252C0.2153937965631485%26scaling%3Dscale-down-width" allowfullscreen></iframe>
+	
 
 	</section>
 
