--- a/Q's_farmer.html
+++ b/Q's_farmer.html
@@ -160,14 +160,14 @@
 
 
 			
-	<iframe style="border: none;" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FKmcRpxqDKA4XvMbqCk7XlBI1%2FPurchase-items-Reserve-events%3Fnode-id%3D0%253A1%26viewport%3D-1242%252C-450%252C0.296851%26scaling%3Dscale-down" allowfullscreen></iframe>
+	<iframe style="margin-left: 40%;" width="30%" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FKmcRpxqDKA4XvMbqCk7XlBI1%2FPurchase-items-Reserve-events%3Fnode-id%3D0%253A1%26viewport%3D-1242%252C-450%252C0.296851%26scaling%3Dscale-down" allowfullscreen></iframe>
 
 
 
 	<h2 class="animated wow fadeInDown">Add items and events for farmer</h2>
 
 
-	<iframe style="border: none;" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FUgjOza4x36hMCBFI9X9MJMkh%2FAdd-items-events%3Fnode-id%3D0%253A1%26viewport%3D-517%252C3%252C0.172938%26scaling%3Dscale-down" allowfullscreen></iframe>
+	<iframe style="margin-left: 40%;" width="30%" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FUgjOza4x36hMCBFI9X9MJMkh%2FAdd-items-events%3Fnode-id%3D0%253A1%26viewport%3D-517%252C3%252C0.172938%26scaling%3Dscale-down" allowfullscreen></iframe>
 
 	<h2 class="animated wow fadeInDown">Game & Recipes</h2>
 
@@ -210,28 +210,35 @@
 		<div class="animated wow fadeInUp">		
 		<h2>Traditional Task Flow for ordering products</h2>
 		<span>We mapped the traditional task flow for taking orders for customers by phone. </span>
-		<img class="icon" style="width: 100%; margin: auto;" src="work/img/orderflow.svg">
+		<img style="width: 60%; margin-left: 20%;" src="work/img/orderflow.svg">
 		</div>
-		<h2></h2>
-
 
 		<div class="animated wow fadeInUp">
 		<h2>Challenges of farmers</h2>
 		<span>We identified three challenges of farmer form the interview with farm manager and farmers. </span>
 	   </div>
-		<div class="animated wow fadeIn">
+		
+		<ul class="clearfix">
+			<li class="animated wow fadeInDown" data-wow-delay=".2s">
+				
+				<img class="icon" src="work/img/line-graph.svg">
+				<p><mark>Unpredictable harvest</mark><br>Due to weather or other factors, harvest of the farmer is <strong>unpredictable</strong>.</p> 
+			</li>
+			<li class="animated wow fadeInDown"  data-wow-delay=".4s">
+			
+				<img class="icon" src="work/img/hourglass.svg">
+				<p><mark>Short shelf life</mark><br>The products are mainly fresh food which have a <strong>short shelf life</strong>.</p> 
+			</li>
+			<li class="animated wow fadeInDown"  data-wow-delay=".6s">
+				<img class="icon" src="work/img/update.svg">
+				<p><mark>Inventory update</mark><br>Inventory data needs to be <strong>update frequently</strong> because of unpredictable harvest and short shelf life.</p> 
+			</li>
+		</ul>
 
-		<img class="icon" src="work/img/line-graph.svg">
-		<img class="icon" src="work/img/hourglass.svg">
-		<img class="icon" src="work/img/update.svg">
 
-		<p id="d1"><mark>Unpredictable harvest</mark><br>Due to weather or other factors, harvest of the farmer is <strong>unpredictable</strong>.</p> 
-		<p id="d2"><mark>Short shelf life</mark><br>The products are mainly fresh food which have a <strong>short shelf life</strong>.</p> 
-		<p id="d3"><mark>Inventory update</mark><br>Inventory data needs to be <strong>update frequently</strong> because of unpredictable harvest and short shelf life.</p> 
-	    </div>
+		
 
-
-
+	</section>
 	</section>
 
 
