--- a/Q's_farmer.html
+++ b/Q's_farmer.html
@@ -361,7 +361,7 @@
 		<section class="pp wrapper">
 		<div class="animated wow fadeInDown">
 		<h2>Paper prototying </h2>
-		<span>In order to discover potential breakdowns before hi-fi interface, I conducted paper prototype testing. With lo-fi wireframe, it helps users to focus on the flow of task and their needs. Here were some of what I found: <br><br>
+		<p>In order to discover potential breakdowns before hi-fi interface, I conducted paper prototype testing. With lo-fi wireframe, it helps users to focus on the flow of task and their needs. Here were some of what I found: <br><br>
 
 		•	The location of cart is different from user’s experience on goods page<br>
 		•	“Cart” section is confusing for the farm manipulating<br>
@@ -371,9 +371,7 @@
 
 		<br>After revising over and over, I made first interactive prototype.
 
-	
-
-		</span>
+		</p>
 
 		<img src="work/img/IMG_1838.jpg">
 		</div>
