--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 				<ul>
 					<li><a href="https://www.facebook.com/profile.php?id=100002158816472" target="blank"><i class="icon-facebook2"></i></a></li>
 					<li><a href="https://www.instagram.com/ericychi__/" target="blank"><i class="icon-instagram"></i></a></li>
-					<li><a href="https://www.linkedin.com/in/yucheng-chi/" target="blank"><i class="icon-linkedin2"></i></a></li>
+					<li><a href="https://www.linkedin.com/in/ycchi/" target="blank"><i class="icon-linkedin2"></i></a></li>
 					<li><a href="https://dribbble.com/ycchi" target="blank"><i class="icon-dribbble2"></i></a></li>
 				</ul>
 
@@ -129,7 +129,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 					   				<div class="slider-text-inner">
 					   					<div class="desc">
 						   					<h1>I am <br>a Designer</h1>
-												<p><a class="btn btn-primary btn-learn" href="https://www.linkedin.com/in/yucheng-chi/" target="blank">View LinkedIn <i class="icon-linkedin22"></i></a></p>
+												<p><a class="btn btn-primary btn-learn" href="https://www.linkedin.com/in/ycchi/" target="blank">View LinkedIn <i class="icon-linkedin22"></i></a></p>
 											</div>
 					   				</div>
 					   			</div>
