--- a/index.html
+++ b/index.html
@@ -269,7 +269,18 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 						</div></a>
 
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-							<div class="project" style="background-image: url(images/ut.png);">
+							<div class="project" style="background-image: url(images/petwin.png);">
+								<a href="https://medium.com/@ycchi/petwin-from-shelter-to-home-e2ee4c2fde09" target="blank"><div class="desc">
+									<div class="con">
+										<h1>Petwin</h1>
+										<span>UI/UX</span>
+									</div>
+								</div>
+							</div>
+						</div>
+
+						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+							<div class="project" style="background-image: url(images/ut.png); margin-left: 7% ;width: 93%;">
 								<!--<a href="vote.html" target="blank">--><div class="desc">
 									<div class="con">
 										<h1>under construction</h1>
@@ -279,8 +290,8 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 							</div>
 						</div>
 
-						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-							<div class="project" style="background-image: url(work/img/vote.png); margin-left: 7% ;width: 93%; ">
+						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
+							<div class="project" style="background-image: url(work/img/vote.png); ">
 								<a href="vote.html" target="blank"><div class="desc">
 									<div class="con">
 										<h1>#Vote</h1>
@@ -290,8 +301,8 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 							</div>
 						</div></a>
 						
-						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-							<div class="project" style="background-image: url(images/img-4.jpg);">
+						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+							<div class="project" style="background-image: url(images/img-4.jpg); margin-left:7% ;width: 93%;">
 								<a href="Collection.html" target="blank"><div class="desc">
 									<div class="con">
 										<h1>UI Design Collection</h1>
