--- a/Q's_farmer.html
+++ b/Q's_farmer.html
@@ -270,6 +270,7 @@
 	</section>
 </section>
 
+
 	<hr class="animated wow fadeIn">
 
 	<section id="section5" class="cd-section">
@@ -300,29 +301,47 @@
 
 	<section class="brainstormconclusion wrapper">
 	<div class="animated wow fadeInUp">
-	<span>We treated three core values of user and three challenges of farmer as our pillars. We came out of 50+ function first and chose those fitted the most in our user flow. Over iteration, we came out of five functions.<br><br>
+	<span>We regarded three core values of user and three challenges of farmer as our pillars. We came out of 50+ function first and chose those fitted the most in our user flow. Over iteration, we came out of five functions.<br><br>
 	</span></div>
 
 
 	<div class="wow animated fadeIn">
-	<h2>Five Main Functions</h2>
-	<img class="function" src="work/img/function.png">
+	
+		<h2>Five Main Functions</h2>
+		<div class="function-row">
+		<div class="function-img"><img src="work/img/qj-items.svg"></div><div class="function-text"><p>Buy and sell products of farm with pre-order. Pre-order not only allows the farm to share the risk with consumers in other form but also meets the core value of users</p></div></div>
+
+		<div class="function-row">
+		<div class="function-img"><img src="work/img/qj-events.svg"></div><div class="function-text"><p>A section not only for users to reserve events, farmers to creat events but also serves as a platform to promo information between each side</p></div></div>
+
+		<div class="function-row">
+		<div class="function-img"><img src="work/img/qj-game.svg"></div><div class="function-text"><p>A farming simulator motivates users check the app frequently. When users harvest something on the app, they can gain same product in real world from farmers. We add weather and other condition in the game to create empathy and connection to farmers</p></div></div>
+
+		<div class="function-row">
+		<div class="function-img"><img src="work/img/qj-recipes.svg"></div><div class="function-text"><p>Users have to cook almost everything that buy from the farm. Therefore, recipe serves as an useful tool to attract users to come back after purchasing</p></div></div>
+
+		<div class="function-row">
+		<div class="function-img"><img src="work/img/qj-messages.svg"></div><div class="function-text"><p>User and can send message directly to farmers, vice versa. It helps both sides to communicate efficiently and easily</p></div></div>
+
+		<div class="function-row">
+		<div class="function-img"><img src="work/img/qj-cartorder.svg"></div><div class="function-text"><p>For users, it's a traditional shopping cart where they can temporarily keep their product and eventually check out. For farmers, they can check, accept and reject orders </p></div></div>
+
+
 	</div>
 
-
+	
 	<div class="wow animated fadeInUp">
 
+	
 	<h2>Three Goals</h2>	
 	<span>We listed three goals as well:<br></span>
 
 
-	<p>•	Design an intuitive and user-friendly interface so that users can efficiently place their order or reserve for events <br><br>
+	<p class="goals">•	Design an intuitive and user-friendly interface so that users can efficiently place their order or reserve for events <br><br>
 	•	Provide a platform which allows farmers to update and sell their inventory easily and effectively<br><br>
 	•	Create and maintain connection between consumer and farmer</strong><br></p>
 
-	<span>
-	Based on our main functions and goals, we made our first wireframe.
-	</span>
+	<span>Based on our main functions and goals, we made our first wireframe.</span>
 </div>
 
 
