--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 									</div>
 								</div>
 							</div>
-						</div>
+						</div></a>
 
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="project" style="background-image: url(images/ut.png); margin-left: 7% ;width: 93%;">
