--- a/Q's_farmer.html
+++ b/Q's_farmer.html
@@ -379,16 +379,16 @@
 
 		<section class="pp wrapper">
 		<div class="animated wow fadeInDown">
-		<h2>Paper prototying </h2>
-		<p>In order to discover potential breakdowns before hi-fi interface, I conducted paper prototype testing. With lo-fi wireframe, it helps users to focus on the flow of task and their needs. Here were some of what I found: <br><br>
+		<h2>Paper prototyping </h2>
+		<p>In order to discover potential breakdowns before hi-fi interface, I conducted paper prototype testing. With lo-fi wireframe, it helps users to focus on the flow of task and their needs. Here were part of points that I found: <br><br>
 
-		•	The location of cart is different from user’s experience on goods page<br>
-		•	“Cart” section is confusing for the farm manipulating<br>
-		•	The location of cart is different from user’s experience<br>
-		•	Should search function be included<br>
-		•	Should there be filter for items and events<br><br>
+		•	"View recipes" button on Items page was confusing<br>
+		•	"Items" and "Shopping cart" on navigation bar were too similar to recognize <br>
+		•	Users expected a confirmation page after they check out<br>
+		•	No indicator on calendar to show if there is event on certain date...<br>
 
-		<br>After revising over and over, I made first interactive prototype.
+
+		<br>After revising over and over, I came out with the final interactive prototype as you saw above.
 
 		</p>
 
