--- a/index.html
+++ b/index.html
@@ -246,10 +246,10 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 
 						<div class="row">
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-							<div class="project" style="background-image: url(images/Qeesi.png); width: 102%;">
-							<a href="https://drive.google.com/file/d/1Id-Vw4HyPX87aj-0kCcqqAyWDaPA3zkJ/view?usp=sharing" target="blank"><div class="desc">
+							<div class="project" style="background-image: url(images/petwin.png); width: 102%;">
+							<a href="https://medium.com/@ycchi/petwin-from-shelter-to-home-e2ee4c2fde09" target="blank"><div class="desc">
 									<div class="con">
-										<h1>QEESI</h1>
+										<h1>Petwin</h1>
 										<span>UI/UX</span>
 									</div>
 								</div>
@@ -258,22 +258,22 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 
 						<div class="row">
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-							<div class="project" style="background-image: url(work/img/mac.gif); margin-left:7% ;width: 93%;">
-							<a href="SoCoolEng.html" target="blank"><div class="desc">
+							<div class="project" style="background-image: url(images/Qeesi.png); margin-left:7% ;width: 93%;">
+							<a href="https://drive.google.com/file/d/1Id-Vw4HyPX87aj-0kCcqqAyWDaPA3zkJ/view?usp=sharingl" target="blank"><div class="desc">
 									<div class="con">
-										<h1>So Cool English</h1>
-										<span>Product Design</span>
+										<h1>Qeesi</h1>
+										<span>UI/UX</span>
 									</div>
 								</div>
 							</div>
 						</div></a>
 
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-							<div class="project" style="background-image: url(images/petwin.png);">
-								<a href="https://medium.com/@ycchi/petwin-from-shelter-to-home-e2ee4c2fde09" target="blank"><div class="desc">
+							<div class="project" style="background-image: url(work/img/mac.gif);">
+								<a href="SoCoolEng.htm" target="blank"><div class="desc">
 									<div class="con">
-										<h1>Petwin</h1>
-										<span>UI/UX</span>
+										<h1>So Cool English</h1>
+										<span>Product Design</span>
 									</div>
 								</div>
 							</div>
