--- a/blushup.html
+++ b/blushup.html
@@ -43,7 +43,7 @@
 
 	<section class="bg wrapper">
 		<h2>Overview</h2>
-		<div class="subtitle"><p>Blushup is a startup company in New York city and it offers a platform for customers to make in-store make up online. As a ui/ux designer, I worked closely with CEO and CTO to redesign our new platform. Moreover, due to NDA, I'm only able to show a quick review of my design. Please hit me up and I am more than happy to share details with you!</p></div>
+		<div class="subtitle"><p>Blushup is a startup company in New York city and it offers a platform for customers to reserve in-store makeup online. As a ui/ux designer, I worked closely with CEO and CTO to redesign our new platform. However, due to NDA, I'm only able to show a quick review of my design. Please hit me up and I am more than happy to share details with you!</p></div>
 		
 		<ul class="clearfix">
 			<li>
