--- a/Q's_farmer.html
+++ b/Q's_farmer.html
@@ -7,7 +7,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="HandheldFriendly" content="true">
 	<meta name="author" content="Eric Chi">
-	<meta name="description" content="An app aims to provide a platform which allows consumers to pre-order products and reserve events of farmers' market."/>
+	<meta name="description" content="An app aims to provide a platform for customers to order products and reserve events of farmers' market."/>
 	<link rel="stylesheet" type="text/css" href="work/css/reset.css">
 	<link rel="stylesheet" type="text/css" href="work/css/animate.css">
 	<link rel="stylesheet" type="text/css" href="work/css/farm.css">
@@ -93,7 +93,7 @@
 	<div class="overview">
 		<div class="animated wow fadeInDown">
 		<h2> Overview </h2>
-		<p>Q's Farmer App is an app more than traditional digital marketplace. It provides a platform for farmers and consumers to trade and communication. Moreover, it aims for maintaining social ties between farmers and consumers in both digital and real world. The project includes complete process of ux research, solution ideation and ui design. I did the research part as a group and the design part by myself. </p>
+		<p>Q's Farmer App is an app more than traditional digital marketplace. It provides a platform for farmers and customers to trade and communication. Moreover, it aims for maintaining social ties between farmers and customers in both digital and real world. The project includes complete process of ux research, solution ideation and ui design. I did the research part as a group and the design part by myself. </p>
 	</div>
 		</div>
 
@@ -133,17 +133,17 @@
 <section id="section2" class="cd-section">
 	<section class="background wrapper">
 		<h2 class="animated wow fadeInUp">Background</h2>
-		<span class="animated wow fadeInUp">A farmers' market is a physical retail marketplace intended to sell foods directly by farmers to consumers. There are several benefits for farmers’ market. For example, by directly selling products to consumer, farmers gain more profits than selling it to wholesalers, food processors, or large grocery firms. Consumers also receive fresher and healthier foods meanwhile reduce the cost and pollution. <br><br>
+		<span class="animated wow fadeInUp">A farmers' market is a physical retail marketplace intended to sell foods directly by farmers to customers. There are several benefits for farmers’ market. For example, by directly selling products to customer, farmers gain more profits than selling it to wholesalers, food processors, or large grocery firms. Customers also receive fresher and healthier foods meanwhile reduce the cost and pollution. <br><br>
 
 		Farmers hold different kind of events for people to get closer to nature and deliver knowledges of our daily food to everyone. For instance, A small farm in Austin cooperates with schools to teach kids where our food comes from and teach them how to grow their own plants. In other words, farms play the role of educator and provide a space for leisure. 		</span>	
 
 		<img class="animated wow fadeInUp" src="work/img/IMG_4625.jpg">
 
 		<h2 class="animated wow fadeInUp">Challenge</h2>
-		<span class="animated wow fadeInUp"> For small and medium scale farmers, they have trouble in maintaining their inventory due to several reasons. They also suffer from unnecessary loss because of the characteristics of fresh vegetable and fruit. Thus, farmers seek a new way to share their risks with consumer, meet consumer’s needs and also maintain the social connection at the same time. </span>
+		<span class="animated wow fadeInUp"> For small and medium scale farmers, they have trouble in maintaining their inventory due to several reasons. They also suffer from unnecessary loss because of the characteristics of fresh vegetable and fruit. Thus, farmers seek a new way to sell their items to customers, meet customer’s needs and also maintain the social connection at the same time. </span>
 
 		<h2 class="animated wow fadeInUp">Research Questions</h2>
-		<p class="animated wow fadeInUp">How to duplicate the experience of farmers market from real world to digtial world? <br> What are the main goal and pain point of farmer and consumer?<br>How to share risk with customers<br>What’s the specialty and unique of farmers market?</p>
+		<p class="animated wow fadeInUp">How to duplicate the experience of farmers market from real world to digtial world? <br> What are the main goal and pain point of farmer and customer?<br>What’s the specialty and unique of farmers market?</p>
 
 	</section>
 </section>
@@ -156,7 +156,7 @@
 
 		<img class="funicon" src="work/img/funicon.svg">
 
-		<h2 class="animated wow fadeInDown">Purchase items and reserve events for consumers</h2>
+		<h2 class="animated wow fadeInDown">Purchase items and reserve events for customers</h2>
 
 
 			
@@ -185,7 +185,7 @@
 
 		<div class="animated wow fadeInUp">
 		<h2>Contextual Inquiry & Observations</h2>
-		<span>As part of field study, we mainly relied on contextual inquiry to gain insight of users. We not only conducted contextual inquiries on small/medium 5 farmers but also conducted it on 4 different types of target users. By observing users directly and recording their attitude, mood, reaction during real tasks, it brought us the information we couldn’t retrieve from interview. Through notes, photos and videos from different person and perspectives, we were able to discuss and integrate the opinions afterward and finally catch the core values of that users care.
+		<span>We conducted contextual inquiries on farmers and customers in the farmer's market. By observing their interaction directly and recording their attitude, mood, reaction during real tasks, it brought us the information we couldn’t retrieve from interview. Through notes, photos and videos from different person and perspectives, we were able to discuss and integrate the opinions afterward and finally catch the core values of that users care.
 			<br><br>
 		We use affinity diagram to list our notes.<br><br></span></div>
 
@@ -198,7 +198,7 @@
 
 		<div class="animated wow fadeInUp">		
 		<h2>Interview</h2>
-		<span>We conducted 7 semi-structured interview as well, including the manager of 1 medium farm, 2 farmers and 4 consumers. We regarded the manager of medium farm as key informant who is able to provide us the most insights about farmers. We interviewed 4 different types of consumers as well. Different from contextual inquiry, semi-structured interview provided us information within a narrow scale. With the information in a restricted scale, we spotted the common difficulties or problems that users would face during tasks. <br></span>
+		<span>We conducted 7 semi-structured interview as well, including the manager of 1 medium scale farm, 2 farmers and 4 customers. We regarded the manager of medium farm as key informant who is able to provide us the most insights about farmers. We interviewed 4 different types of customers as well. Different from contextual inquiry, semi-structured interview provided us information within a narrow scale. With the information in a restricted scale, we spotted the common difficulties or problems that customers face in traditional farmer's markets.</span>
 		</div>
 
 		
@@ -208,8 +208,8 @@
 
 		
 		<div class="animated wow fadeInUp">		
-		<h2>Traditional Task Flow for ordering products</h2>
-		<span>We mapped the traditional task flow for taking orders for customers by phone. </span>
+		<h2>Communication between framer and customer</h2>
+		<span>The communication between framer and customer can be messy and intricate and it usually included several channels and platforms. As you can see below: </span>
 		<img style="width: 60%; margin-left: 20%;" src="work/img/orderflow.svg">
 		</div>
 
@@ -222,16 +222,16 @@
 			<li class="animated wow fadeInDown" data-wow-delay=".2s">
 				
 				<img class="icon" src="work/img/line-graph.svg">
-				<p><mark>Unpredictable harvest</mark><br>Due to weather or other factors, harvest of the farmer is <strong>unpredictable</strong>.</p> 
+				<p><mark>Unpredictable harvest</mark><br>Due to weather or other factors, harvest of the farmer is <strong><i>unpredictable</strong></i>.</p> 
 			</li>
 			<li class="animated wow fadeInDown"  data-wow-delay=".4s">
 			
 				<img class="icon" src="work/img/hourglass.svg">
-				<p><mark>Short shelf life</mark><br>The products are mainly fresh food which have a <strong>short shelf life</strong>.</p> 
+				<p><mark>Short shelf life</mark><br>The products are mainly fresh food which have a <strong><i>short shelf life</strong></i>.</p> 
 			</li>
 			<li class="animated wow fadeInDown"  data-wow-delay=".6s">
 				<img class="icon" src="work/img/update.svg">
-				<p><mark>Inventory update</mark><br>Inventory data needs to be <strong>update frequently</strong> because of unpredictable harvest and short shelf life.</p> 
+				<p><mark>Inventory update</mark><br>Inventory data needs to be <strong><i>update frequently</i></strong> because of unpredictable harvest and short shelf life.</p> 
 			</li>
 		</ul>
 
@@ -244,25 +244,25 @@
 
 	<section class="value wrapper">
 	<div class="animated wow fadeInUp">
-	<h2>Core values that consumer cares </h2>
-	<span>Deprived from contextual inquiries and interviews, we defined three core values that consumer cares the most.</span>
+	<h2>Core values that customer cares </h2>
+	<span>Deprived from contextual inquiries and interviews, we defined three core values that customer cares the most.</span>
 	</div>
 
 	<div class="animated wow fadeInUp">
 	<p class="t">"Flexibility"</p>
 
-	<p class="c">User desires <I><b>flexibility</b></I> about the schedule of farmers market. There are usually a fixed schedule of farmers market. For example, the farmers markets in Austin are held on Sunday 10:00 am to 2 pm at Browning Hangar Park. However, not everyone is always available at that time. Thus, user seeks for some flexibility to buy items at different time and location. </p>
+	<p class="c">Customer desires <strong><i>flexibility</i></strong> about the schedule of farmers market. There are usually a fixed schedule of farmers market. For example, the farmers markets in Austin are held on Sunday 10:00 am to 2 pm at Browning Hangar Park. However, not everyone is always available at that time. Thus, user seeks for some flexibility to buy items at different time and location. </p>
 	</div>
 
 	<div class="animated wow fadeInUp">
 	<p class="t">"Convenience"</p>
 
-	<p class="c">User seeks <I><strong>convenience</strong></I> when it comes to order products from farmers. In traditional way, consumers can either make a phone call or go to the farm directly to order products. Nonetheless, there is only few or even only one worker in the farm during week day. At most of time, they all working in the farm instead of staying in the office and waiting for a phone call. Users usually have troubles to make an order.</p>  
+	<p class="c">Customer seeks <strong><i>convenience</strong></I> when it comes to order products from farmers. In traditional way, customers can either make a phone call or go to the farm directly to order products. Nonetheless, there is only few or even only one worker in the farm during week day. At most of time, they are all working in the farm instead of staying in the office and waiting for a phone call. Thus, making a order is a pain point for customers.</p>  
 	</div>
 	<div class="animated wow fadeInUp">
 	<p class="t">"Predictability"</p>
 
-	<p class="c">User cares about <I><strong>what kinds of product will they have in this week's market</strong></I>. Users look for information for them to do other decisions. Users still purchase fresh goods from other marketplace. If they can know what will farmers have in this week's farmers market earlier, they will have a clear plan of what should buy or not buy during other shopping.</p>
+	<p class="c">Customer cares about <I><strong>what kinds of product will they have in this week's market</strong></I>. Customers look for information for them to do other decisions since they still purchase fresh goods from other marketplace. If they can know what will farmers have in this week's farmers market earlier, they will have a clear plan of what should buy or not buy during other shopping.</p>
 	</div>
 	
 	
@@ -280,7 +280,7 @@
 	</div>
 	<div class="animated wow fadeInUp">
 	<h2>Persona</h2>
-	<span>Based on the behavior patterns and core values of user found in research. We made two personas to represent our potential users.</span>
+	<span>Based on the behavior patterns and insights found in research. We made two personas to represent our potential users.</span>
 	</div>
 
 	<div class="animated wow fadeIn">
@@ -292,7 +292,7 @@
 
 	<div class="animated wow fadeInUp">
 	<h2>Brainstorming</h2>
-	<span>At the first of ideation, we started from discussing with the farm manager. We all agreed that mobile app is the option with the most potential. Next, we did brainstorm to come up with what functions shall we include in our app. </span> 
+	<span>At the first of ideation, we started from discussing with the farmers. We all agreed that mobile app is the option with the most potential. Next, we did brainstorm to come up with what functions shall we include in our app. </span> 
 	</div>
 	<div class="animated wow fadeIn">
 	<img class="brainstorm" src="work/img/brainstorm.jpg">
@@ -301,7 +301,7 @@
 
 	<section class="brainstormconclusion wrapper">
 	<div class="animated wow fadeInUp">
-	<span>We regarded three core values of user and three challenges of farmer as our pillars. We came out of 50+ function first and chose those fitted the most in our user flow. Over iteration, we came out of five functions.<br><br>
+	<span>Based on our research, we came out of 50+ function first and chose those fitted the most in our user flow. Over iterate over and over, we came out of five functions.<br><br>
 	</span></div>
 
 
@@ -309,10 +309,10 @@
 	
 		<h2>Five Main Functions</h2>
 		<div class="function-row">
-		<div class="function-img"><img src="work/img/qj-items.svg"></div><div class="function-text"><p>Buy and sell products of farm with pre-order. Pre-order not only allows the farm to share the risk with consumers in other form but also meets the core value of users</p></div></div>
+		<div class="function-img"><img src="work/img/qj-items.svg"></div><div class="function-text"><p>Farmers can add items for customers to buy in this section. It works based on calendar. For example, farmers can add a item for 10 days and customer can view and order it only in these days.</p></div></div>
 
 		<div class="function-row">
-		<div class="function-img"><img src="work/img/qj-events.svg"></div><div class="function-text"><p>A section not only for users to reserve events, farmers to creat events but also serves as a platform to promo information between each side</p></div></div>
+		<div class="function-img"><img src="work/img/qj-events.svg"></div><div class="function-text"><p>A section not only for users to reserve events and farmers to creat events but also serves as a platform to promo information between each side</p></div></div>
 
 		<div class="function-row">
 		<div class="function-img"><img src="work/img/qj-game.svg"></div><div class="function-text"><p>A farming simulator motivates users check the app frequently. When users harvest something on the app, they can gain same product in real world from farmers. We add weather and other condition in the game to create empathy and connection to farmers</p></div></div>
@@ -337,9 +337,9 @@
 	<span>We listed three goals as well:<br></span>
 
 
-	<p class="goals">•	Design an intuitive and user-friendly interface so that users can efficiently place their order or reserve for events <br><br>
-	•	Provide a platform which allows farmers to update and sell their inventory easily and effectively<br><br>
-	•	Create and maintain connection between consumer and farmer</strong><br></p>
+	<p class="goals">•	Design an intuitive and user-friendly experience that users can efficiently place their order or reserve for events <br><br>
+	•	Provide a platform which allows farmers to update and sell their inventory easily and efficiently<br><br>
+	•	Create and maintain connection between customer and farmer</strong><br></p>
 
 	<span>Based on our main functions and goals, we made our first wireframe.</span>
 </div>
@@ -356,12 +356,12 @@
 		<div class="animated wow fadeInDown">
 		<h1>Wireframe and Prototype</h1>
 		<h2>How does it work?</h2>
-		<span>According to unpredictable supplement and pre-order, I have orders start from pending status after consumers placing their orders. The farm has to confirm that all of items in the order are available and then click “confirm order” button to accept the order. I also designed a message section for consumers and producer to communicate directly and efficiently. </span>
+		<span>For non pre-order items, they are availiable for customers during the period which farmers set. For pre-order items, framers can set the number of days before they would be availiable. <br><br> According to unpredictable supplement and pre-order, I have orders start from pending status after customers placing their orders. The farm has to confirm that all of items in the order are available and then click “confirm order” button to accept the order. I also designed a message section for customers and producer to communicate directly and efficiently. </span>
 		</div>
 
 		
 
-		<h2 class="animated wow fadeInDown">For consumer</h2>
+		<h2 class="animated wow fadeInDown">For customer</h2>
 		<div class="animated wow fadeIn">
 		<img src="work/img/qj1.svg">
 		<img src="work/img/qj2.svg">
@@ -418,7 +418,7 @@
 
 
 <span>
-One of the biggest benefits of local farmers' market is to create social ties and link people together. Farmers' markets help create distinction and uniqueness, which can increase pride and encourage residents to engage in community. However, this kind of connection may be easily destroyed by Internet. Thus, how to maintain this connection is my first priority. In future, I think I the function for consumers to choose products with different levels of ripeness will be helpful. I hope farmers' market could grow into a hub of a community where people can find healthy food and wealthy mood.  
+One of the biggest benefits of local farmers' market is to create social ties and link people together. Farmers' markets help create distinction and uniqueness, which can increase pride and encourage residents to engage in community. However, this kind of connection may be easily destroyed by Internet. Thus, how to maintain this connection is my first priority. In future, I think I the function for customers to choose products with different levels of ripeness will be helpful. I hope farmers' market could grow into a hub of a community where people can find healthy food and wealthy mood.  
 </span>
 </div>
 </section>
