--- a/Q's_farmer.html
+++ b/Q's_farmer.html
@@ -93,7 +93,7 @@
 	<div class="overview">
 		<div class="animated wow fadeInDown">
 		<h2> Overview </h2>
-		<p>Q's Farmer App is an app more than traditional digital marketplace. It provides a platform for farmers and customers to trade and communication. Moreover, it aims for maintaining social ties between farmers and customers in both digital and real world. The project includes complete process of ux research, solution ideation and ui design. I did the research part as a group and the design part by myself. </p>
+		<p>Q's Farmer App is an app more than a traditional digital marketplace. It provides a platform for farmers and customers to trade and communication. Moreover, it aims to maintain social ties between farmers and customers in both the digital and the real world. The project includes a complete process of UX research, solution ideation and UI design. I did the research part as a group and the design part by myself. </p>
 	</div>
 		</div>
 
@@ -133,14 +133,14 @@
 <section id="section2" class="cd-section">
 	<section class="background wrapper">
 		<h2 class="animated wow fadeInUp">Background</h2>
-		<span class="animated wow fadeInUp">A farmers' market is a physical retail marketplace intended to sell foods directly by farmers to customers. There are several benefits for farmers’ market. For example, by directly selling products to customer, farmers gain more profits than selling it to wholesalers, food processors, or large grocery firms. Customers also receive fresher and healthier foods meanwhile reduce the cost and pollution. <br><br>
+		<span class="animated wow fadeInUp">A farmers' market is a physical retail marketplace intended to sell foods directly by farmers to customers. There are several benefits to farmers’ markets. For example, by directly selling products to the customers, farmers gain more profits than selling it to wholesalers, food processors, or large grocery firms. Customers also receive fresher and healthier foods meanwhile reduce the cost and pollution. <br><br>
 
-		Farmers hold different kind of events for people to get closer to nature and deliver knowledges of our daily food to everyone. For instance, A small farm in Austin cooperates with schools to teach kids where our food comes from and teach them how to grow their own plants. In other words, farms play the role of educator and provide a space for leisure. 		</span>	
+		Farmers hold different kinds of events for people to get closer to nature and deliver knowledge of our daily food to everyone. For instance, A small farm in Austin cooperates with schools to teach kids where our food comes from and teach them how to grow their own plants. In other words, farms play the role of educators and provide a space for leisure. </span>	
 
 		<img class="animated wow fadeInUp" src="work/img/IMG_4625.jpg">
 
 		<h2 class="animated wow fadeInUp">Challenge</h2>
-		<span class="animated wow fadeInUp"> For small and medium scale farmers, they have trouble in maintaining their inventory due to several reasons. They also suffer from unnecessary loss because of the characteristics of fresh vegetable and fruit. Thus, farmers seek a new way to sell their items to customers, meet customer’s needs and also maintain the social connection at the same time. </span>
+		<span class="animated wow fadeInUp"> For small and medium-scale farmers, they have trouble maintaining their inventory due to several reasons. They also suffer from unnecessary losses because of the characteristics of fresh vegetable and fruit. Thus, farmers seek a new way to sell their items to customers, meet customer’s needs and also maintain the social connection at the same time. </span>
 
 		<h2 class="animated wow fadeInUp">Research Questions</h2>
 		<p class="animated wow fadeInUp">How to duplicate the experience of farmers market from real world to digtial world? <br> What are the main goal and pain point of farmer and customer?<br>What’s the specialty and unique of farmers market?</p>
@@ -185,9 +185,9 @@
 
 		<div class="animated wow fadeInUp">
 		<h2>Contextual Inquiry & Observations</h2>
-		<span>We conducted contextual inquiries on farmers and customers in the farmer's market. By observing their interaction directly and recording their attitude, mood, reaction during real tasks, it brought us the information we couldn’t retrieve from interview. Through notes, photos and videos from different person and perspectives, we were able to discuss and integrate the opinions afterward and finally catch the core values of that users care.
+		<span>We conducted contextual inquiries on farmers and customers in the farmers' market. By observing their interaction directly and recording their attitude, mood, reaction during real tasks, it brought us the information we couldn’t retrieve from the interviews. Through notes, photos and videos from different interviewers and perspectives, we were able to discuss and integrate the opinions afterward and finally catch the core values of that users care.
 			<br><br>
-		We use affinity diagram to list our notes.<br><br></span></div>
+		We used an affinity diagram to list our notes.<br><br></span></div>
 
 		<div class="wow animated fadeInUp">
 		<img class="diagram" src="work/img/aff.jpg">
@@ -198,7 +198,7 @@
 
 		<div class="animated wow fadeInUp">		
 		<h2>Interview</h2>
-		<span>We conducted 7 semi-structured interview as well, including the manager of 1 medium scale farm, 2 farmers and 4 customers. We regarded the manager of medium farm as key informant who is able to provide us the most insights about farmers. We interviewed 4 different types of customers as well. Different from contextual inquiry, semi-structured interview provided us information within a narrow scale. With the information in a restricted scale, we spotted the common difficulties or problems that customers face in traditional farmer's markets.</span>
+		<span>We conducted 7 semi-structured interviews as well, including the manager of 1 medium-scale farm, 2 farmers and 4 customers. We regarded the manager of the medium-scale farm as a key informant who can provide us the most insights about farmers. Moreover, we interviewed 4 different types of customers as well. Different from contextual inquiry, semi-structured interviews provided us information in a narrow scale. With the information in a restricted scale, we spotted the common difficulties or problems that customers face in traditional farmers' markets.</span>
 		</div>
 
 		
@@ -209,13 +209,13 @@
 		
 		<div class="animated wow fadeInUp">		
 		<h2>Communication between framer and customer</h2>
-		<span>The communication between framer and customer can be messy and intricate and it usually included several channels and platforms. As you can see below: </span>
+		<span>The communication between framers and customers can be messy and intricate and it usually included several channels and platforms. As you can see below: </span>
 		<img style="width: 60%; margin-left: 20%;" src="work/img/orderflow.svg">
 		</div>
 
 		<div class="animated wow fadeInUp">
 		<h2>Challenges of farmers</h2>
-		<span>We identified three challenges of farmer form the interview with farm manager and farmers. </span>
+		<span>We identified three challenges of farmers form the interview with the farm manager and farmers. </span>
 	   </div>
 		
 		<ul class="clearfix">
@@ -245,24 +245,24 @@
 	<section class="value wrapper">
 	<div class="animated wow fadeInUp">
 	<h2>Core values that customer cares </h2>
-	<span>Deprived from contextual inquiries and interviews, we defined three core values that customer cares the most.</span>
+	<span>Deprived from contextual inquiries and interviews, we defined three core values that the customer cares the most.</span>
 	</div>
 
 	<div class="animated wow fadeInUp">
 	<p class="t">"Flexibility"</p>
 
-	<p class="c">Customer desires <strong><i>flexibility</i></strong> about the schedule of farmers market. There are usually a fixed schedule of farmers market. For example, the farmers markets in Austin are held on Sunday 10:00 am to 2 pm at Browning Hangar Park. However, not everyone is always available at that time. Thus, user seeks for some flexibility to buy items at different time and location. </p>
+	<p class="c">Customers desire <strong><i>flexibility</i></strong> about the schedule of farmers' markets. There is usually a fixed schedule of farmers' markets. For example, the farmers' markets in Austin are held on Sunday from 10:00 am to 2 pm at Browning Hangar Park. However, not everyone is always available at that time. Thus, the customer seeks some flexibility to buy items at different times and locations. </p>
 	</div>
 
 	<div class="animated wow fadeInUp">
 	<p class="t">"Convenience"</p>
 
-	<p class="c">Customer seeks <strong><i>convenience</strong></I> when it comes to order products from farmers. In traditional way, customers can either make a phone call or go to the farm directly to order products. Nonetheless, there is only few or even only one worker in the farm during week day. At most of time, they are all working in the farm instead of staying in the office and waiting for a phone call. Thus, making a order is a pain point for customers.</p>  
+	<p class="c">A customer seeks <strong><i>convenience</i></strong> when it comes to ordering products from farmers. Traditionally, customers can either make a phone call or go to the farm directly to order products. Nonetheless, there are only few or even only one worker on the farm during the weekday. Most of the time, they are all working on the farm instead of staying in the office and waiting for a phone call. Thus, making an order is a pain point for customers.</p>  
 	</div>
 	<div class="animated wow fadeInUp">
 	<p class="t">"Predictability"</p>
 
-	<p class="c">Customer cares about <I><strong>what kinds of product will they have in this week's market</strong></I>. Customers look for information for them to do other decisions since they still purchase fresh goods from other marketplace. If they can know what will farmers have in this week's farmers market earlier, they will have a clear plan of what should buy or not buy during other shopping.</p>
+	<p class="c">Customers care about <strong><i>what kinds of products will they have in this week's market</i></strong>. Customers look for information for them to do other decisions since they still purchase fresh goods from other marketplaces. If they can know what will farmers have in this week's farmers market earlier, they will have a clear plan of what should buy or not buy during other shopping.</p>
 	</div>
 	
 	
@@ -356,7 +356,7 @@
 		<div class="animated wow fadeInDown">
 		<h1>Wireframe and Prototype</h1>
 		<h2>How does it work?</h2>
-		<span>For non pre-order items, they are availiable for customers during the period which farmers set. For pre-order items, framers can set the number of days before they would be availiable. <br><br> According to unpredictable supplement and pre-order, I have orders start from pending status after customers placing their orders. The farm has to confirm that all of items in the order are available and then click “confirm order” button to accept the order. I also designed a message section for customers and producer to communicate directly and efficiently. </span>
+		<span>According to unpredictable supplements, I have orders start from pending status after customers placing their orders. The farm has to confirm that all of the items in the order are available and then click “confirm order” button to accept the order. I also designed a message section for customers and farmers to communicate directly and efficiently. </span>
 		</div>
 
 		
