--- a/Q's_farmer.html
+++ b/Q's_farmer.html
@@ -418,7 +418,7 @@
 
 
 <span>
-One of the biggest benefits of local farmers' market is to create social ties and link people together. Farmers' markets help create distinction and uniqueness, which can increase pride and encourage residents to engage in community. However, this kind of connection may be easily destroyed by Internet. Thus, how to maintain this connection is my first priority. In future, I think I the function for customers to choose products with different levels of ripeness will be helpful. I hope farmers' market could grow into a hub of a community where people can find healthy food and wealthy mood.  
+One of the biggest benefits of local farmers' markets is to create social ties and link people together. Farmers' markets help create distinction and uniqueness, which can increase pride and encourage residents to engage in community. However, this kind of connection may be easily destroyed by the Internet. Thus, how to maintain this connection is my first priority. In the future, the function for customers to choose products with different levels of ripeness will be helpful. I hope farmers' markets could grow into a hub of a community where people can find healthy foods and a wealthy mood.  
 </span>
 </div>
 </section>
