--- a/SoCoolEng.html
+++ b/SoCoolEng.html
@@ -151,7 +151,7 @@
 	<section class="challenge wrapper">
 		<div class="animated wow fadeInUp">
 			<h2> Challenge </h2>
-				<p>English education in Asia focuses on reading and listening more than speaking and writing. High school students usually are capable of understanding English vocabulary and sentence but unable to express articulately or compose a sentence in English. After surveying 68 students first grade high school students, we concluded the primary challenges of improving speaking and writing skills in English for students. </p>
+				<p>English education in Asia focuses on reading and listening more than speaking and writing. High school students usually are capable of understanding English vocabulary and sentence but unable to express articulately or compose a sentence in English. After surveying 68 students first-grade high school students, we concluded the primary challenges of improving speaking and writing skills in English for students. </p>
 		</div>
 
 
@@ -249,7 +249,7 @@
 
 		<section id="section4" class="evaluation wrapper cd-section">
 			<h2>Evaluation</h2>
-			<span>To evaluate our project and gain feedback, we conducted pretest-posttest with 2 classes. Total sample number was 68. <br> According to the outcome, correct rate of pronunciation increases the most (90.2%) and vocabulary comes in second place (80%). Moreover, correct rate of grammar rises the least. We speculate that due to the complexity of grammar,  it is difficult to have obvious  enhance in grammar skill. Last but not least, the correct rate of expression climbs up from 34% to 58.6%. Although long-term evaluation is still needed, we agree that So Cool English has potential to become even better in the future. </span>
+			<span>To evaluate our project and gain feedback, we conducted a pretest-posttest with 2 classes. The total sample number was 68. <br> According to the outcome, the correct rate of pronunciation increases the most (90.2%) and vocabulary comes in second place (80%). Moreover, the correct rate of grammar rises the least. We speculate that due to the complexity of grammar,  it is difficult to have obvious enhance in grammar skills. Last but not least, the correct rate of expression climbs up from 34% to 58.6%. Although long-term evaluation is still needed, we agree that So Cool English has the potential to become even better in the future. </span>
 			 <div id="chart_div" style="width: 100%; height: 500px; top: 3%;"></div>
 
 
@@ -263,7 +263,7 @@
 			<h2>Reflection</h2>
 			<h3>“Empathy always comes in the first place”</h3>
 
-			<span>I built this website on Wordpress because it will be easily for non-tech person to update and maintain. If I had more time, I would focus on succinct information architecture and seamless interface in order to provide best experience to users. In future, I suggest it could add record and test function which provides a more thorough learning experience from 0 to 100. </span>
+			<span>I built this website on Wordpress because it will be easier for a non-tech person to update and maintain. If I had more time, I would focus on succinct information architecture and a seamless interface to provide the best experience to users. In the future, I suggest it could add record and test function which provides a more thorough learning experience from 0 to 100. </span>
 
 		</div>
 
